Fixed extra spacing
Need to figure out how to easily handle text

--- a/css/wuSlider.scss
+++ b/css/wuSlider.scss
@@ -4,6 +4,8 @@
 	display:inline-block;
 	padding:30px 0;
 	overflow:hidden;
+	zoom: 1;
+	font-size:0;
 	
 	.slideNav{
 		position:absolute;
@@ -25,14 +27,14 @@
 		.rBtn{
 			right:1%;
 		}
-	}
+	} 
 	.slide{
+		word-spacing:0;
 		display:inline-block;
 		position:relative;
-		width:32.3%;
+		width:30.333%;
 		background:red;
-		margin:0 0.5%;
-		white-space:nowrap;
+		margin:0 1.5%;
 		transition:background 0.5s;
 		
 		img{
@@ -40,15 +42,12 @@
 			height:auto;
 		}
 	 }
-	 .slide:first-child{
-		float:left;
-	 }
 	 .slide.focus{
 		background:blue;
 	 }
 }
 .slideSize{
-	width:90%;
+	width:99%;
 	margin:0 auto;
 	overflow:hidden;
 }
@@ -58,11 +57,29 @@
 	float:left;
 	white-space:nowrap;
 }
-@media (max-width:1000px){
+@media (max-width:1200px){
+	.slideSize{
+		width:95%;
+		margin:0 auto;
+		overflow:hidden;
+	}
+	.wuSlide{
+		.slide{
+			width:48%;
+			margin:0 1%;
+		}
+	}
+}
+@media (max-width:850px){
+	.slideSize{
+		width:92%;
+		margin:0 auto;
+		overflow:hidden;
+	}
 	.wuSlide{
 		.slide{
 			width:98%;
-			margin:0 1.05vw;
+			margin:0 1%;
 		}
 	}
 }
